--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -21,6 +21,9 @@ a{
 a:hover{
   color: #333;
 }
+a, input, textarea, select{
+  font-size: .8rem;
+}
 input, select{
   border: none;
   background: none;
@@ -88,7 +91,7 @@ img{
   padding:0;
   text-align:center;
   background: #fece02;
-  z-index: 9999;
+  z-index: 3;
 }
 .header div{
   display: inline-block;
@@ -149,6 +152,30 @@ img{
   font-size: 1.5rem;
   font-weight: bold;
 }
+.go_back, .go_cart{
+  position: absolute;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  z-index: 5;
+}
+.go_back img{
+  width: 8px;
+  height: 16px;
+  margin: 17px auto;
+}
+.go_cart img{
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+}
+.go_back{
+  left: 0;
+ }
+.go_cart{
+  right: 0;
+ }
+
 /*footer.html*/
 
 .footer{
