--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -18,6 +18,9 @@
 	float:left;
 	width:100%;
 	padding:0;
+	transform: translate3d(0,0,0); /*解决页面滑动不流畅*/
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
 }
 
 #pullDown, #pullUp {
