--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -2,14 +2,11 @@
   margin: 0;
   padding: 0;
 }
-html { 
-  overflow: hidden; 
-  overflow-y: hidden; 
-}
 body{
   font-size: .8rem;
   color: #333;
   font-family: '微软雅黑';
+  margin: 50px 0;
 }
 ul, li{
   list-style: none;
@@ -196,7 +193,7 @@ img{
   background: #fff;
   z-index: 9999;
 }
-.footer ul li{
+.footer a{
   float: left;
   display: block;
   width: 25%;
@@ -216,10 +213,26 @@ img{
   background-size: 22px;
 }
 .cart{
+  position: relative;
   background: url(../images/Cart.png) center top 5px no-repeat;
   background-size: 32px;
 }
-.footer ul li p{
+.cart_num{
+  position: absolute;
+  right: 22px;
+  top: 0;
+  text-align: center;
+  border-radius: 100%;
+  padding: 3px;
+  min-width: 12px;
+  height: 12px;
+  line-height: 12px;
+  font-size: 12px;
+  color: #fff;
+  border: 1px solid #fff;
+  background: #DB585A;
+}
+.footer a p{
   position: absolute;
   width: 100%;
   bottom: 3px;
